syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.academy";
option java_outer_classname = "KeyManager";
option objc_class_prefix = "HLW";

import "google/protobuf/timestamp.proto";
package br.com.zup.academy;

service KeyManagerService {
  rpc adicionar(KeyManagerRequest) returns (KeyManagerResponse) {}

}

service KeyManagerServiceDelete{
  rpc remover(KeyDeleteRequest) returns (KeyDeleteResponse){}

}

service KeyManagerServiceBuscar{
  rpc buscar(KeyBuscarRequest) returns(KeyBuscarResponse){}

}

service KeyManagerServiceListar{
  rpc listar(KeyListarRequest) returns (KeyListarResponse){}

}

message KeyListarRequest{
  string clienteId = 1;

}

message KeyListarResponse{
  message ChavePix{
    string pixId = 1;
    TipoDeChave tipoDeChave = 2;
    string valorDaChave = 3;
    TipoDeConta tipoDeConta = 4;
    string criadaEm = 5;
  }
  string clienteId = 1;
  repeated ChavePix chaves = 2;

}

message KeyBuscarRequest{
  message FiltroPixId{
    string clienteId = 1;
    string pixId = 2;
  }
  oneof filtro{
    FiltroPixId filtroPixId = 1;
    string chave = 2;
  }

}

message KeyBuscarResponse{
  message ChavePix{
    message Conta{
      TipoDeConta tipoConta = 1;
      string instituicaoNome = 2;
      string instituicaoIspb = 3;
      string titularNome = 4;
      string titularCpf = 5;
      string agencia = 6;
      string numero = 7;
    }
    TipoDeChave tipoChave = 1;
    string chave = 2;
    Conta conta = 3;
    string criadaEm = 4;
  }
  string pixId = 1;
  string clienteId = 2;
  ChavePix chavePix = 3;

}

message KeyDeleteRequest{
  string clienteId = 1;
  string pixId = 2;

}

message KeyDeleteResponse{
  string msg = 1;

}

message KeyManagerRequest {
  string id = 1;
  TipoDeChave tipoDeChave = 2;
  string valorChave = 3;
  TipoDeConta tipoDeConta = 4;

}

message KeyManagerResponse {
  string id = 1;

}

enum TipoDeChave{
  PreencheDefaultChave = 0;
  PHONE = 1;
  EMAIL = 2;
  RANDOM = 3;
  CPF = 4;

}

enum TipoDeConta{
  PreencheDefaultConta = 0;
  CONTA_CORRENTE     = 1;
  CONTA_POUPANCA     = 2;

}